Added tests for MobileManipMotionPlanner class
Signed-off-by: Ricardo Sanchez <ricardosan@uma.es>

--- a/test/unit/CMakeLists.txt
+++ b/test/unit/CMakeLists.txt
@@ -21,6 +21,7 @@ file(GLOB MM_types_SRC
 # Link runTests with what we want to test and the GTest and pthread library
 add_executable(runUnitTests 
                UnitTests.cpp 
+               MobileManipMotionPlannerTests.cpp
                ${MM_SRC}
                ${MM_types_SRC})
 target_include_directories(runUnitTests PRIVATE ../../src/types)
