Adding OpenCV library for some maps
Signed-off-by: Ricardo Sanchez <ricardosan@uma.es>

--- a/test/harnessExample/CMakeLists.txt
+++ b/test/harnessExample/CMakeLists.txt
@@ -4,10 +4,13 @@ project (HarnessExample)
 
 find_package(PkgConfig REQUIRED)
 find_package (Eigen3 3.3 REQUIRED NO_MODULE)
+find_package( OpenCV REQUIRED )
 
 set(MM_DIRECTORY ../../src)
 
+include_directories( ${OpenCV_INCLUDE_DIRS} )
 include_directories(${MM_DIRECTORY})
+set(WP_DIR ../../deps/control-waypoint_navigation)
 
 
 file(GLOB MM_SRC
@@ -20,12 +23,19 @@ file(GLOB MM_types_SRC
     "../../src/types/*.cpp"
 )  
 
+file(GLOB WP_SRC
+    "../../deps/control-waypoint_navigation/WaypointNavigation.hpp"
+    "../../deps/control-waypoint_navigation/WaypointNavigation.cpp"
+) 
+
 add_executable(harnessexample
                HarnessExample.cpp
                ${MM_SRC}
-               ${MM_types_SRC})
+               ${MM_types_SRC}
+               ${WP_SRC})
 target_include_directories(harnessexample PRIVATE ../../src/types)
-target_link_libraries (harnessexample Eigen3::Eigen)
+target_include_directories(harnessexample PRIVATE ../../deps/control-waypoint_navigation)
+target_link_libraries (harnessexample Eigen3::Eigen ${OpenCV_LIBS})
 
 
 
