Create fast marching library, develope some functions and initial tests

--- a/test/unit/CMakeLists.txt
+++ b/test/unit/CMakeLists.txt
@@ -21,6 +21,11 @@ file(GLOB MM_types_SRC
     "../../src/types/*.cpp"
 )
 
+file(GLOB FM_SRC
+    "../../src/planner/*.h"
+    "../../src/planner/*.cpp"
+)
+
 file(GLOB WP_SRC
     "../../deps/control-waypoint_navigation/WaypointNavigation.hpp"
     "../../deps/control-waypoint_navigation/WaypointNavigation.cpp"
@@ -30,11 +35,14 @@ file(GLOB WP_SRC
 add_executable(runUnitTests 
                UnitTests.cpp 
                MobileManipMotionPlannerTests.cpp
-               MobileManipMapTests.cpp
+	       #MobileManipMapTests.cpp
                MotionPlanTests.cpp
+	       FastMarchingTests.cpp
                ${MM_SRC}
                ${MM_types_SRC}
+	       ${FM_SRC}
                ${WP_SRC})
 target_include_directories(runUnitTests PRIVATE ../../src/types)
+target_include_directories(runUnitTests PRIVATE ../../src/planner)
 target_include_directories(runUnitTests PRIVATE ../../deps/control-waypoint_navigation)
 target_link_libraries(runUnitTests ${GTEST_LIBRARIES} ${OpenCV_LIBS} pthread Eigen3::Eigen)
