readMatrixFile is now contained in separated files
Signed-off-by: Ricardo Sanchez <ricardosan@uma.es>

--- a/test/unit/CMakeLists.txt
+++ b/test/unit/CMakeLists.txt
@@ -37,6 +37,8 @@ add_executable(runUnitTests
                MobileManipMotionPlannerTests.cpp
 	       MobileManipMapTests.cpp
                MotionPlanTests.cpp
+               readMatrixFile.h
+               readMatrixFile.cpp
 	       #FastMarchingTests.cpp
                ${MM_SRC}
                ${MM_types_SRC}
