Making unit tests more independent
Signed-off-by: Ricardo Sanchez <ricardosan@uma.es>

--- a/test/unit/CMakeLists.txt
+++ b/test/unit/CMakeLists.txt
@@ -42,7 +42,7 @@ add_executable(runUnitTests
 	       MobileManipMapTests.cpp
 	       MotionPlanTests.cpp
 	       MobileManipExecutorTests.cpp
-               MobileManipMotionPlannerTests.cpp
+	       #MobileManipMotionPlannerTests.cpp
                readMatrixFile.h
                readMatrixFile.cpp
                ${MM_SRC}
