Cleaned arm motion functions
Signed-off-by: Ricardo Sanchez <ricardosan@uma.es>

--- a/test/unit/CMakeLists.txt
+++ b/test/unit/CMakeLists.txt
@@ -40,8 +40,8 @@ file(GLOB CC_SRC
 add_executable(runUnitTests 
                UnitTests.cpp 
 	       MobileManipMapTests.cpp
-	       #MotionPlanTests.cpp
-	       #MobileManipExecutorTests.cpp
+	       MotionPlanTests.cpp
+	       MobileManipExecutorTests.cpp
 	       #MobileManipMotionPlannerTests.cpp
                readMatrixFile.h
                readMatrixFile.cpp
