Preparing harness test, working on MotionPlanner class
Signed-off-by: Ricardo Sanchez <ricardosan@uma.es>

--- a/test/harnessExample/CMakeLists.txt
+++ b/test/harnessExample/CMakeLists.txt
@@ -1,17 +1,15 @@
-cmake_minimum_required (VERSION 3.1)
+cmake_minimum_required(VERSION 2.6)
 
-project (HarnessExample)
-
-find_package(PkgConfig REQUIRED)
+# Locate GTest
+find_package(GTest REQUIRED)
+include_directories(${GTEST_INCLUDE_DIRS})
 find_package (Eigen3 3.3 REQUIRED NO_MODULE)
 find_package( OpenCV REQUIRED )
 
-set(MM_DIRECTORY ../../src)
-
 include_directories( ${OpenCV_INCLUDE_DIRS} )
-include_directories(${MM_DIRECTORY})
+include_directories(../../src)
+include_directories(data)
 set(WP_DIR ../../deps/control-waypoint_navigation)
-
 
 file(GLOB MM_SRC
     "../../src/*.h"
@@ -21,7 +19,12 @@ file(GLOB MM_SRC
 file(GLOB MM_types_SRC
     "../../src/types/*.h"
     "../../src/types/*.cpp"
-)  
+)
+
+file(GLOB MMML_SRC
+    "../../src/mmFileManagerLib/*.h"
+    "../../src/mmFileManagerLib/*.cpp"
+)
 
 file(GLOB FM_SRC
     "../../src/planner/*.h"
@@ -31,21 +34,25 @@ file(GLOB FM_SRC
 file(GLOB WP_SRC
     "../../deps/control-waypoint_navigation/WaypointNavigation.hpp"
     "../../deps/control-waypoint_navigation/WaypointNavigation.cpp"
-) 
+)  
+
+file(GLOB CC_SRC
+    "../../deps/coupled_control/coupledControl.hpp"
+    "../../deps/coupled_control/coupledControl.cpp"
+)  
 
 add_executable(harnessexample
                HarnessExample.cpp
                ${MM_SRC}
                ${MM_types_SRC}
-               ${FM_SRC}
-               ${WP_SRC})
+	       ${MMML_SRC}
+	       ${FM_SRC}
+               ${WP_SRC}
+	       ${CC_SRC})
 target_include_directories(harnessexample PRIVATE ../../src/types)
+target_include_directories(harnessexample PRIVATE ../../src/mmFileManagerLib)
 target_include_directories(harnessexample PRIVATE ../../src/planner)
+target_include_directories(harnessexample PRIVATE ../../deps/coupled_control)
 target_include_directories(harnessexample PRIVATE ../../deps/control-waypoint_navigation)
-target_link_libraries (harnessexample Eigen3::Eigen ${OpenCV_LIBS})
-
-
-
-
-
+target_link_libraries (harnessexample ${GTEST_LIBRARIES} ${OpenCV_LIBS} pthread Eigen3::Eigen)
 
