--- a/test/harnessExample/CMakeLists.txt
+++ b/test/harnessExample/CMakeLists.txt
@@ -5,6 +5,7 @@ find_package(GTest REQUIRED)
 include_directories(${GTEST_INCLUDE_DIRS})
 find_package (Eigen3 3.3 REQUIRED NO_MODULE)
 find_package( OpenCV REQUIRED )
+find_package(DART 6.6.0 REQUIRED COMPONENTS utils-urdf gui CONFIG)
 
 include_directories( ${OpenCV_INCLUDE_DIRS} )
 include_directories(../../src)
@@ -70,5 +71,5 @@ target_include_directories(harnessexample PRIVATE ../../src/mmFileManagerLib)
 target_include_directories(harnessexample PRIVATE ../../src/planner)
 target_include_directories(harnessexample PRIVATE ../../deps/coupled_control)
 target_include_directories(harnessexample PRIVATE ../../deps/control-waypoint_navigation)
-target_link_libraries (harnessexample ${GTEST_LIBRARIES} ${OpenCV_LIBS} pthread Eigen3::Eigen)
+target_link_libraries (harnessexample ${GTEST_LIBRARIES} ${OpenCV_LIBS} pthread Eigen3::Eigen dart dart-utils-urdf dart-gui)
 
