--- a/test/unit/CMakeLists.txt
+++ b/test/unit/CMakeLists.txt
@@ -10,7 +10,7 @@ find_package(DART 6.6.0 REQUIRED COMPONENTS utils-urdf gui CONFIG)
 include_directories( ${OpenCV_INCLUDE_DIRS} )
 include_directories(../../src)
 include_directories(data)
-set(WP_DIR ../../deps/control-waypoint_navigation)
+set(WP_DIR ../../deps/ESA-Trajectory_Control)
 
 file(GLOB MM_SRC
     "../../src/*.h"
@@ -40,18 +40,18 @@ file(GLOB MMML_SRC
 )
 
 file(GLOB FM_SRC
-    "../../src/planner/*.h"
-    "../../src/planner/*.cpp"
+    "../../deps/UMA-PathAndMotion_Planning/*.h"
+    "../../deps/UMA-PathAndMotion_Planning/*.cpp"
 )
 
 file(GLOB WP_SRC
-    "../../deps/control-waypoint_navigation/WaypointNavigation.hpp"
-    "../../deps/control-waypoint_navigation/WaypointNavigation.cpp"
+    "../../deps/ESA-Trajectory_Control/WaypointNavigation.hpp"
+    "../../deps/ESA-Trajectory_Control/WaypointNavigation.cpp"
 )  
 
 file(GLOB CC_SRC
-    "../../deps/control-coupled_control/src/coupledControl.hpp"
-    "../../deps/control-coupled_control/src/coupledControl.cpp"
+    "../../deps/UMA-Coupled_Control/src/coupledControl.hpp"
+    "../../deps/UMA-Coupled_Control/src/coupledControl.cpp"
 )  
 
 # Link runTests with what we want to test and the GTest and pthread library
@@ -72,7 +72,7 @@ target_include_directories(runUnitTests PRIVATE ../../src/types)
 target_include_directories(runUnitTests PRIVATE ../../src/types/base)
 target_include_directories(runUnitTests PRIVATE ../../src/types/proxy_library)
 target_include_directories(runUnitTests PRIVATE ../../src/mmFileManagerLib)
-target_include_directories(runUnitTests PRIVATE ../../src/planner)
-target_include_directories(runUnitTests PRIVATE ../../deps/control-waypoint_navigation)
-target_include_directories(runUnitTests PRIVATE ../../deps/control-coupled_control/src)
+target_include_directories(runUnitTests PRIVATE ../../deps/UMA-PathAndMotion_Planning)
+target_include_directories(runUnitTests PRIVATE ../../deps/ESA-Trajectory_Control)
+target_include_directories(runUnitTests PRIVATE ../../deps/UMA-Coupled_Control/src)
 target_link_libraries(runUnitTests ${GTEST_LIBRARIES} ${OpenCV_LIBS} pthread Eigen3::Eigen dart dart-utils-urdf dart-gui)
