Finished fixing merging issues
Signed-off-by: Ricardo Sanchez <ricardosan@uma.es>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -84,6 +84,7 @@ set(MM_INCLUDEPATHS
     ${CMAKE_CURRENT_SOURCE_DIR}/src/mmFileManagerLib
     ${CMAKE_CURRENT_SOURCE_DIR}/src/planner
     ${CMAKE_CURRENT_SOURCE_DIR}/deps/UMA-PathAndMotion_Planning
+    ${CMAKE_CURRENT_SOURCE_DIR}/deps/UMA-Coupled_Control/src
     ${CMAKE_CURRENT_SOURCE_DIR}/deps/ESA-Trajectory_Control
 )
 target_include_directories(mobilemanipulation PRIVATE ${MM_INCLUDEPATHS})
