Fixed problem regarding dependency on rg type
Signed-off-by: Ricardo Sanchez <ricardosan@uma.es>

--- a/test/harnessExample/CMakeLists.txt
+++ b/test/harnessExample/CMakeLists.txt
@@ -10,6 +10,7 @@ find_package(DART 6.6.0 REQUIRED COMPONENTS utils-urdf gui CONFIG)
 include_directories( ${OpenCV_INCLUDE_DIRS} )
 include_directories(../../src)
 include_directories(data)
+include_directories(../../src/types/rg)
 set(WP_DIR ../../deps/ESA-Trajectory_Control)
 
 file(GLOB MM_SRC
