--- a/utils/collisionsPlotter/CMakeLists.txt
+++ b/utils/collisionsPlotter/CMakeLists.txt
@@ -5,12 +5,12 @@ if(DART_IN_SOURCE_BUILD)
   return()
 endif()
 
-
 project(collisionsPlotter)
 
 find_package(DART 6.6.0 REQUIRED COMPONENTS utils-urdf gui CONFIG)
 
 include_directories(../../src)
+include_directories(../../src/types/rg)
 include_directories(data)
 set(WP_DIR ../../deps/ESA-Trajectory_Control)
 
