--- a/test/unit/CMakeLists.txt
+++ b/test/unit/CMakeLists.txt
@@ -9,6 +9,7 @@ find_package(DART 6.6.0 REQUIRED COMPONENTS utils-urdf gui CONFIG)
 
 include_directories( ${OpenCV_INCLUDE_DIRS} )
 include_directories(../../src)
+include_directories(../../src/types/rg)
 include_directories(data)
 set(WP_DIR ../../deps/ESA-Trajectory_Control)
 
