--- a/test/unit/CMakeLists.txt
+++ b/test/unit/CMakeLists.txt
@@ -59,8 +59,8 @@ file(GLOB CC_SRC
 add_executable(runUnitTests 
                UnitTests.cpp 
                MobileManipMapTests.cpp
-	       MotionPlanTests.cpp
-	       MobileManipExecutorTests.cpp
+	       #MotionPlanTests.cpp
+	       #MobileManipExecutorTests.cpp
                ${MM_SRC}
                ${MM_types_SRC}
                ${MM_types_SRC_base}
