Working on the correlation between both rover and wrist paths.
Signed-off-by: JRicardoSan <ricardosan@uma.es>

--- a/test/unit/CMakeLists.txt
+++ b/test/unit/CMakeLists.txt
@@ -59,7 +59,7 @@ file(GLOB CC_SRC
 add_executable(runUnitTests 
                UnitTests.cpp 
                MobileManipMapTests.cpp
-	       #MotionPlanTests.cpp
+	       MotionPlanTests.cpp
 	       #MobileManipExecutorTests.cpp
                ${MM_SRC}
                ${MM_types_SRC}
